<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Snoozr</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>

    <string name="settings">Settings</string>
    <string name="allowedSnoozes">Number of Allowed Snoozes</string>
    <string name="sleepCycle">Sleep Cycle</string>
    <string name="sound">Sound</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="dangerZone">Danger Zone</string>
    <string name="resetSchedule">Reset Schedule</string>
    <string name="copyright">Copyright © 2013 Snoozr</string>
    
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    
    <string name="confirmDelete">Are you sure you want to delete your setting configurations?</string>
    <string name="Ok">OK</string>
    
    <string name="alarm">Alarm</string>
    <string name="beep">Beep</string>
    <string name="church_bells">Church Bells</string>
    <string name="police">Police</string>
    
    <string-array name="settings">
        <item>@string/settings</item>
        <item>@string/allowedSnoozes</item>
        <item>@string/sleepCycle</item>
        <item>@string/sound</item>
        <item>@string/about</item>
        <item>@string/version</item>
        <item>@string/dangerZone</item>
        <item>@string/resetSchedule</item>
        <item>@string/copyright</item>   
    </string-array>
    
    <string-array name="numSnoozes">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    
    <string-array name="sleepCycle">
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
        <item>110</item>
    </string-array>
    
    <string-array name="alarmSounds">
        <item>@string/alarm</item>
        <item>@string/beep</item>
        <item>@string/church_bells</item>
        <item>@string/police</item>
    </string-array>
    
    <string name="authors">Created By:\n\tDevon Govett\n\tNico Higuera\n\tDonovan McKelvey\n\tEric Thorndyke\n\nCurrent Version: 1.0</string>
</resources>
