<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">

    <TextView
        android:id="@+id/curAlarmTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" 
        android:layout_centerInParent="true"
        android:textSize="100sp"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/curAlarmTimeOfDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" 
        android:layout_toRightOf="@id/curAlarmTime"
        android:layout_alignBaseline="@id/curAlarmTime"
        android:textSize="25sp"
        android:textColor="#ffffff"/>
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/dismissButton"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"
            style="@style/TextStyle"
            android:background="@drawable/red_button_style"
            android:text="@string/dismiss">
        </Button>
        <Button
            android:id="@+id/snoozeButton"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"
            style="@style/TextStyle"
            android:background="@drawable/blue_button_style"
            android:text="@string/snooze">
        </Button>
    </LinearLayout>

</RelativeLayout>
